# Musek

./: .gitignore  AUTHORS  README.md  meson.build
Musek/: README.md  playback.c  player  player.h  ui.c
data/: meson.build
src/: artist_image_fetch.c  artist_image_fetch.h  library.c  main.c  meson.build  playback.c  player.h  scanner.c  search.c  search.h  sha1.c  sha1.h  ui.h  ui_albumart.c  ui_callbacks.c  ui_internal.h  ui_populate.c  ui_settings.c  ui_setup.c
